# stm32f103-tutorial

./: .env  .gdbinit  .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  openocd.cfg  rustfmt.toml  stm32f103.resc
.cargo/: config.toml  config_defmt.toml  config_runner_gdb.toml  config_runner_qeum.toml
app/adc/ad_multichannel/: Cargo.toml  README.md
app/adc/ad_single_channel/: Cargo.toml  README.md
app/basic/flash_tool_defmt/: Cargo.toml  README.md
app/basic/flash_tool_embed/: Embed.toml  README.md
app/basic/helloworld/: Cargo.toml
app/basic/panics/: README.md
app/basic/unit_testsuite/: Cargo.toml  README.md
app/blinky/: Cargo.toml  README.md
app/blinky/src/: main.rs
app/blinky_led_array/: Cargo.toml  README.md
app/blinky_led_array/src/: main.rs
app/buzzer/: Cargo.toml  README.md
app/buzzer/src/: main.rs
app/delay/asm_delay/: Cargo.toml  README.md
app/delay/syst_delay/: Cargo.toml
app/delay/syst_timer_delay/: README.md
app/delay/tim2_delay/: README.md
app/delay_blinky/: Cargo.toml
app/disable_jtag_ports/: Cargo.toml  README.md
app/dma/dma_data_continuous_transfer/: Cargo.toml  README.md
app/dma/dma_data_transfer/: Cargo.toml  README.md
app/dma/print_memory_address/: Cargo.toml  README.md
app/dma/scan_dma_and_ad_multichannel/: Cargo.toml  README.md
app/dma/scan_dma_and_ad_multichannel_loop/: Cargo.toml  README.md
app/dma/scan_dma_and_ad_multichannel_peek/: Cargo.toml  README.md
app/flash/internal_flash/: Cargo.toml  README.md
app/flash/read_chip_id/: Cargo.toml  README.md
app/flash_tool_defmt/src/: main.rs
app/flash_tool_embed/: Cargo.toml  README.md
app/free_rtos/free_rtos_blinky/: Cargo.toml  README.md  build.rs
app/general_gpio/blinky/: Cargo.toml  README.md
app/general_gpio/buzzer/: Cargo.toml  README.md
app/general_gpio/delay_blinky/: Cargo.toml  README.md
app/general_gpio/dynamic_gpio/: Cargo.toml  README.md
app/general_gpio/ffi-blinky/: Cargo.toml  README.md
app/general_gpio/key_control_led/: Cargo.toml  README.md
app/general_gpio/led_flow_light/: Cargo.toml  README.md
app/general_gpio/light_sensor_control_buzzer/: Cargo.toml  README.md
app/general_gpio/light_sensor_control_buzzer/src/: main.rs
app/general_gpio/multi_mode_gpio/: Cargo.toml  README.md
app/general_gpio/oled_i2c_show_character/: Cargo.toml  README.md
app/general_gpio/tim2_timer_delay_blinky/: Cargo.toml  README.md
app/general_gpio/timer_blinky/: Cargo.toml  README.md
app/general_gpio/turns_user_led/: Cargo.toml  README.md
app/hello/: Cargo.toml
app/hello/src/: main.rs
app/helloworld/: README.md
app/helloworld/src/: main.rs
app/i2c/i2c_hard_mpu6050/: Cargo.toml  README.md
app/i2c/i2c_mpu6050_crate/: Cargo.toml  README.md
app/i2c/i2c_oled_show_character/: Cargo.toml  README.md
app/i2c/i2c_soft_mpu6050/: Cargo.toml  README.md
app/interrupt/opposing_infrared_sensor_count2/: Cargo.toml  README.md
app/interrupt/opposing_infrared_sensor_count2/src/: main.rs
app/interrupt/opposing_infrared_sensor_count2/src/hardware/: peripheral.rs
app/interrupt/timer_interrupt/: Cargo.toml  README.md
app/interrupt/timer_interrupt/src/: main.rs
app/interrupt/timer_interrupt/src/hardware/: mod.rs
app/key_control_led/: Cargo.toml  README.md
app/key_control_led_exti/: Cargo.toml  README.md
app/led_flow_light/: Cargo.toml  README.md
app/light_sensor_control_buzzer/: Cargo.toml  README.md
app/oled_i2c_show_character/: README.md
app/opposing_infrared_sensor_count/: README.md
app/opposing_infrared_sensor_count2/: README.md
app/panics/: Cargo.toml
app/panics/src/: main.rs
app/pwm_custom/: Cargo.toml  README.md
app/pwm_driven_motor/: README.md
app/pwm_driven_servo/: README.md
app/pwm_input_capture_freq_duty_cycle/: Cargo.toml  README.md
app/pwm_led/: Cargo.toml  README.md
app/pwm_led2/: Cargo.toml  README.md
app/pwm_led_remap/: Cargo.toml  README.md
app/rtic/spawn_task_rtic/: Cargo.toml  README.md
app/rtic/spawn_task_rtic/src/: main.rs
app/rtic/timer_interrupt_rtic/: Cargo.toml  README.md
app/rtic/timer_interrupt_rtic/src/: main.rs
app/spi/spi_nrf24l01/: Cargo.toml  README.md
app/spi/spi_nrf24l01/src/: main.rs
app/sys_timer_interrupt/: Cargo.toml  README.md
app/syst_delay/: README.md
app/syst_timer_delay/: Cargo.toml
app/testsuite/: Cargo.toml  README.md
app/testsuite/src/: lib.rs
app/testsuite_replace_embed/: Cargo.toml  README.md
app/tim2_delay/: Cargo.toml
app/tim2_timer_delay_blinky/: Cargo.toml  README.md
app/timer_blinky/: Cargo.toml
app/timer_external_clock/: Cargo.toml  README.md
app/timer_interrupt/: README.md
app/timer_interrupt2/: Cargo.toml  README.md
app/turns_user_led/: Cargo.toml  README.md
app/turns_user_led/src/: main.rs
app/turns_user_led_rtt/: Cargo.toml  README.md
app/unit_testsuite/: Cargo.toml
app/usart/serial_fmt/: Cargo.toml  README.md
app/usart/serial_fmt/src/: main.rs
bak/: link.x  signal_simulation.py
core/bindgen-hello/: Cargo.toml  README.md
core/bindgen_hello/: Cargo.toml  README.md  build.rs
core/bindgen_hello/hello/: bindings.rs  hello.c
core/bindgen_hello/src/: lib.rs
core/ffi-hello/: Cargo.toml  README.md
core/ffi_hello/: Cargo.toml  README.md  build.rs
core/hardware/: Cargo.toml  README.md
core/hardware/src/: key.rs  lib.rs  mpu6050.rs  serial.rs
core/hardware/src/flash_store/: flash_rw.rs  mod.rs  store.rs
core/hardware/src/mpu6050/: conf.rs  mod.rs  mpu6050_hal.rs  mpu6050_reg.rs
core/hardware/src/oled/: font.rs  mod.rs  simple.rs  utils.rs
core/hardware/src/syst/: delay.rs  mod.rs
core/hardware/src/w25q64/: conf.rs  mod.rs  w25q64_hal.rs  w25q64_reg.rs
core/stm32f10x-rs/: Cargo.toml  README.md  build.rs
core/stm32f10x_rs/: Cargo.toml  README.md  build.rs
core/stm32f10x_rs/src/: lib.rs
core/stm32f10x_rs/stm32f10x/System/: delay.c  delay.h
docs/: AI协助.md  Archlinux环境搭建.md  Defmt 单元测试.md  GDB调试.md  Linux st-link配置.md  Minicom使用文档.md  Openocd使用指南.md  Q&A.md  Renode仿真模拟.md  嵌入式入门路线.md  待学习案例.txt  术语介绍.md  环境搭建.md  编译与烧录.md  编译与部署.md
scripts/: stm32f103.resc
src/: lib.rs
(+238 files in other folders)
