[package]
name = "stm32f103-tutorial"
version = "0.1.0"
edition = "2021"
authors = ["silent-rain"]
license = "LICENSE"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false


[workspace]
members = [
    "app/helloworld",
    "app/testsuite",
    "app/turns_user_led",
    "app/turns_user_led_rtt",
    "app/timer_blinky",
    "app/delay_blinky",
    "app/tim2_timer_delay_blinky",
    "app/blinky",
    "app/led_flow_light",
    "app/buzzer",
    "app/key_control_led",
    "app/light_sensor_control_buzzer",
    "app/oled_i2c_show_character",
    "app/opposing_infrared_sensor_count",
    "app/opposing_infrared_sensor_count2",
    "app/key_control_led_exti",
    "app/rotary_encoder_count",
    "app/sys_timer_interrupt",
    "app/timer_interrupt",
    "app/timer_interrupt2",
    "app/timer_external_clock",
    "app/pwm_led",
    "app/pwm_led2",
    "app/pwm_led_remap",
]

[dependencies]
embedded-hal = "1.0.0-rc.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
# 开发板型号: STM32F103C8T6
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}

[dev-dependencies]
defmt-test = "0.3"


[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
incremental = false
codegen-units = 1

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
