[package]
name = "stm32f103-tutorial"
version = "0.1.0"
edition = "2021"
authors = ["silent-rain"]
license = "LICENSE"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false


[workspace]
members = [
    # 基础示例
    "app/basic/helloworld",
    "app/basic/panics",
    "app/basic/flash_tool_embed",
    "app/basic/flash_tool_defmt",
    "app/basic/unit_testsuite",
    # 延迟
    "app/delay/syst_timer_delay",
    "app/delay/syst_delay",
    "app/delay/tim2_delay",
    # 通用 GPIO
    "app/general_gpio/turns_user_led",
    "app/general_gpio/delay_blinky",
    "app/general_gpio/tim2_timer_delay_blinky",
    "app/general_gpio/blinky",
    "app/general_gpio/led_flow_light",
    "app/general_gpio/buzzer",
    "app/general_gpio/key_control_led",
    "app/general_gpio/light_sensor_control_buzzer",
    "app/general_gpio/oled_i2c_show_character",
    # 中断
    "app/interrupt/opposing_infrared_sensor_count",
    "app/interrupt/opposing_infrared_sensor_count2",
    "app/interrupt/key_control_led_exti",
    "app/interrupt/rotary_encoder_count",
    "app/interrupt/sys_timer_interrupt",
    "app/interrupt/timer_interrupt",
    "app/interrupt/timer_interrupt2",
    "app/interrupt/timer_external_clock",
    # 禁用调试端口
    "app/disable_jtag_ports",
    # PWM
    "app/pwm_led",
    "app/pwm_led2",
    "app/pwm_led_remap",
    "app/pwm_custom",
    "app/pwm_driven_servo",
    "app/pwm_driven_motor",
    "app/pwm_input_capture_freq_duty_cycle",
]

[dependencies]
embedded-hal = "1.0.0-rc.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# 开发板型号: STM32F103C8T6
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}

[dev-dependencies]
defmt-test = "0.3"


[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
incremental = false
codegen-units = 1

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
