[package]
name = "flash_tool_embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
rtt-target = {version = "0.4.0", features = []}
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
