[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}

[dev-dependencies]
defmt-test = "0.3"


# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
