[package]
name = "testsuite"
version = "0.1.0"
edition = "2021"


[lib]
harness = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = {version = "0.3", features = ["print-defmt"]}

[dev-dependencies]
defmt-test = "0.3"


# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-
