[package]
name = "turns_user_led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.11"
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
# 开发板型号: STM32F103C8T6
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "high"]}
