[package]
name = "bindgen_hello"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}

[dev-dependencies]
defmt-test = "0.3.0"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.83"
glob = "0.3.1"

[[test]]
name = "hello_demo"
path = "tests/hello_demo.rs"
harness = false
