[package]
name = "hardware"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
nb = "1.1.0"
unwrap-infallible = "0.1.5"
numtoa = "0.2.4"
heapless = "0.8.0"


[dev-dependencies]
defmt-test = "0.3.0"
