[package]
name = "stm32f10x_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "stm32f10x_rs"
path = "src/lib.rs"
harness = false
crate-type = ["staticlib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
panic-probe = {version = "0.3.1", features = ["print-defmt"]}

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.83"
glob = "0.3.1"
