[package]
name = "opposing_infrared_sensor_count2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}

[dependencies.hardware]
path = "../../../core/hardware"
